--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,10 @@
 }
 
 body{
-  background-color: hsl(30, 38%, 92%);;
+  background-color: hsl(30, 38%, 92%);
+  min-width: 100vh;
+  display: grid;
+  place-content: center;
 }
 
 @font-face {
@@ -22,7 +25,6 @@ body{
   display: grid;
   grid-template-columns: 1fr 1fr;
   max-width: 550px;
-  margin: 1rem auto;
   background-color: white;
   border-radius: 0.75rem;
   overflow: hidden;
