--- a/styles/index.css
+++ b/styles/index.css
@@ -24,6 +24,7 @@ body{
   display: grid;
   grid-template-columns: 1fr 1fr;
   max-width: 550px;
+  margin: 1rem auto;
   background-color: white;
   border-radius: 0.75rem;
   overflow: hidden;
@@ -78,6 +79,7 @@ body{
 .card .info{
   display: grid;
   padding: 1.5rem;
+  gap: 1rem;
 }
 
 .card .icon{
@@ -103,14 +105,14 @@ body{
   background-color: hsl(158, 36%, 20%);
 }
 
-@media (max-width: 376px){
+@media (max-width: 450px){
+  body{
+    padding: 2rem;
+  }
+
   .card{
     display: grid;
     grid-template-columns: 1fr;
-    width: 100%;
-  }
-
-  .card img{
     width: 100%;
   }
 }
