--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,7 @@
 
 body{
   background-color: hsl(30, 38%, 92%);
+  min-height: 100vh;
   display: grid;
   place-content: center;
 }
@@ -24,7 +25,6 @@ body{
   display: grid;
   grid-template-columns: 1fr 1fr;
   max-width: 550px;
-  margin: 1rem auto;
   background-color: white;
   border-radius: 0.75rem;
   overflow: hidden;
@@ -42,14 +42,21 @@ body{
   color: hsl(212, 21%, 14%);
 }
 
-.card h2{
+.card h3{
   font-size: 0.8rem;
   font-family: Montserrat;
   font-weight: 500;
   color: hsl(228, 12%, 48%);
 }
 
-.card h3{
+.card h2{
+  font-size: 2rem;
+  font-family: Fraunces;
+  font-weight: 700;
+  color: hsl(212, 21%, 14%);
+}
+
+.card span{
   font-size: 0.75rem;
   font-family: Montserrat;
   font-weight: 500;
@@ -113,6 +120,6 @@ body{
   .card{
     display: grid;
     grid-template-columns: 1fr;
-    width: 100%;
+    max-width: 100%;
   }
 }
